Prevent the tag counts wrapping to the next line.

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -11,7 +11,7 @@
   padding-left: 0;
 }
 .tagcloud li {
-  display: inline;
+  display: inline-block;
 }
 .progress,
 .progress-bar {
